txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -17,7 +17,7 @@
 \usepackage{amsmath,amssymb,bbm}
 \usepackage{graphicx}
 \usepackage[x11names,table]{xcolor}
-\usepackage[colorlinks=true, allcolors=Wheat3]{hyperref}
+\usepackage[colorlinks=true, allcolors=Wheat3!]{hyperref}
 \usepackage{lipsum} 
 \usepackage[shortlabels]{enumitem}
 \usepackage{amsthm}   
