txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -206,5 +206,9 @@ Cool!
 	\[
 	\norm{x-0_X}_X\leq\delta\implies\norm{L(x)-L(0_Y)}_Y\leq\varepsilon.
 	\]
+	We know that $L$ is linear, so $L(0_X)=0_Y$ and therefore we get
+	\begin{equation*}
+		eqn
+	\end{equation*}
 \end{fancyproof}
 \end{document}
