txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -208,7 +208,8 @@ Cool!
 	\]
 	We know that $L$ is linear, so $L(0_X)=0_Y$ and therefore we get
 	\begin{equation*}
-		eqn
+		\norm{x}_X\leq\delta\implies\norm{L(x)}_Y\leq\epsilon.
 	\end{equation*}
+	Choose $\epsilon$
 \end{fancyproof}
 \end{document}
