txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -450,7 +450,7 @@
 					\let\emph\enf
 									\newcommand{\sott}[1]{\setulcolor{SkyBlue3}\ul{#1}}
 									\let\underline\sott
-
+									\let\epsilon\varepsilon
 									\newcommand{\prob}{\mathbb{P}}
 									\newcommand\independent{\protect\mathpalette{\protect\independenT}{\perp}}
 									\newcommand{\ev}{\mathbb{E}}
