txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -210,6 +210,6 @@ Cool!
 	\begin{equation*}
 		\norm{x}_X\leq\delta\implies\norm{L(x)}_Y\leq\epsilon.
 	\end{equation*}
-	Choose $\epsilon$
+	Choose $\epsilon=1$
 \end{fancyproof}
 \end{document}
