txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -214,6 +214,6 @@ Cool!
 	\begin{equation*}
 		\norm{x}_X\leq\delta\implies\norm{L(x)}_Y<1.
 	\end{equation*}
-	
+	Let $x\in X\setminus\{0_X\}$
 \end{fancyproof}
 \end{document}
