txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -214,6 +214,9 @@ Cool!
 	\begin{equation*}
 		\norm{x}_X\leq\delta\implies\norm{L(x)}_Y<1.
 	\end{equation*}
-	Let $x\in X\setminus\{0_X\}$
+	Let $x\in X\setminus\{0_X\}$ and set $y=\frac{\delta}{\norm{x}_X}x$. Now we have that
+	\begin{equation*}
+		\norm{y}_X=\norm{arg1}
+	\end{equation*}
 \end{fancyproof}
 \end{document}
