--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -216,7 +216,7 @@ Cool!
 	\end{equation*}
 	Let $x\in X\setminus\{0_X\}$ and set $y=\frac{\delta}{\norm{x}_X}x$. Now we have that
 	\begin{equation*}
-		\norm{y}_X=\norm{arg1}
+		\norm{y}_X=\norm{\frac{\delta}{\norm{x}_X}x}_{X}=
 	\end{equation*}
 \end{fancyproof}
 \end{document}
