txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -218,5 +218,6 @@ Cool!
 	\begin{equation*}
 		\norm{y}_X=\norm{\frac{\delta}{\norm{x}_X}x}_{X}=\frac{\delta}{\cancel{\norm{x}_X}}\cancel{\norm{x}_X}=\delta
 	\end{equation*}
+	and, due to the linearit
 \end{fancyproof}
 \end{document}
