--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -218,6 +218,9 @@ Cool!
 	\begin{equation*}
 		\norm{y}_X=\norm{\frac{\delta}{\norm{x}_X}x}_{X}=\frac{\delta}{\cancel{\norm{x}_X}}\cancel{\norm{x}_X}=\delta
 	\end{equation*}
-	and, due to the linearit
+	and, due to the linearity of $L$,
+	\begin{equation*}
+		\norm{L(y)}_Y=\norm{L\left(\frac{\delta}{\norm{x}_X}x\right)}_Y=
+	\end{equation*}
 \end{fancyproof}
 \end{document}
