--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -220,7 +220,7 @@ Cool!
 	\end{equation*}
 	and, due to the linearity of $L$,
 	\begin{equation*}
-		\norm{L(y)}_Y=\norm{L\left(\frac{\delta}{\norm{x}_X}x\right)}_Y=
+		\norm{L(y)}_Y=\norm{L\left(\frac{\delta}{\norm{x}_X}x\right)}_Y=\frac{\delta}{\norm{x}_X}\norm{L(x)}_Y=
 	\end{equation*}
 \end{fancyproof}
 \end{document}
