--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -222,5 +222,6 @@ Cool!
 	\begin{equation*}
 		\norm{L(y)}_Y=\norm{L\left(\frac{\delta}{\norm{x}_X}x\right)}_Y=\frac{\delta}{\norm{x}_X}\norm{L(x)}_Y=\frac{\delta}{\norm{x}_X}\norm{L(x)}_Y<1\implies\norm{L(x)}_Y<\frac{1}{\delta}\norm{x}_X.
 	\end{equation*}
+	So, setting $C=\frac{1}{\delta}$ proves $\ref{prop123}$
 \end{fancyproof}
 \end{document}
