txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -224,8 +224,8 @@ Cool!
 	\end{equation*}
 	So, setting $C=\frac{1}{\delta}$ proves $\ref{prop123}$. We still need to prove \ref{prop121}$\implies$\ref{prop123}: 'tis easy, since by linearity we have
 	\begin{equation*}
-		\norm{L(x)-L(y)}_{X}=\norm{L(x-y)}_X\leq C\norm{x-y}_Y
+		\norm{L(x)-L(y)}_{X}=\norm{L(x-y)}_X\leq C\norm{x-y}_Y\qquad\every x,y\in X
 	\end{equation*}
-	and this clearly the continuity
+	and this clearly implies the continuity
 \end{fancyproof}
 \end{document}
