txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -226,6 +226,6 @@ Cool!
 	\begin{equation*}
 		\norm{L(x)-L(y)}_{X}=\norm{L(x-y)}_X\leq C\norm{x-y}_Y\qquad\every x,y\in X
 	\end{equation*}
-	and this clearly implies the continuity
+	and this clearly implies the continuity of $L$ at any $x\in X$ (actually, the uniform continuity).
 \end{fancyproof}
 \end{document}
