--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -228,5 +228,7 @@ Cool!
 	\end{equation*}
 	and this clearly implies the continuity of $L$ at any $x\in X$ (actually, the uniform continuity).
 \end{fancyproof}
-
+\begin{definition}
+	If $(X,\dnorm_X)$
+\end{definition}
 \end{document}
