txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -550,6 +550,7 @@
 									\newcommand{\dyadic}{\mathcal{d}}
 									\newcommand{\norm}[1]{\left|\negthinspace\left|#1\right|\negthinspace\right|}
 		\newcommand{\pr}{\mathbb{P}}
+		\newcommand{\dnorm}{\norm{\cdot}}
 		\newcommand{\indi}{\mathbb{1}}
 		\newcommand{\sa}{$\sigma$-algebra}	\newcommand{\rv}{random variable}
 		\titleformat{\section}{\color{IndianRed1}}{\color{red}\thesection}{1em}{}
