txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -229,6 +229,6 @@ Cool!
 	and this clearly implies the continuity of $L$ at any $x\in X$ (actually, the uniform continuity).
 \end{fancyproof}
 \begin{definition}
-	If $(X,\dnorm_X)$
+	If $(X,\dnorm_X)$ and $(Y,\dnorm_Y)$ are two normed spaces, we denote by $\mathcal{L}(X,Y)$ the space of continuous linear applications from $X$ to $Y$. If $X=Y$ se simply denote $\mathcal{L}(X)$.
 \end{definition}
 \end{document}
