txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Second.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Second.tex
@@ -2413,7 +2413,7 @@ For $T > 0$, define $D_T = \mR^n \times (0,T), D_0 = \mR^n \times \{0\}$. Of cou
             \end{cases}
         \end{equation*}
         satisfies $v \in \mathcal{C}^{2,1}(\mR^n \times (0,+\infty)) \cap \mathcal{C}^0(\mR^n \times [0,+\infty))$ and solves (CPP). Also, $u \in L^\infty(\mR^n \times [0,+\infty))$.
-        \item If $v$ is another solution of (CPP) satisfying $v \in \mathcal{C}^{2,1}(\mR^n \times (0,+\infty)) \cap \mathcal{C}^0(\mR^n \tiems [0,+\infty))$ and $|v(x,t)| \leq A e^{a |x|^2}$ in $\mR^n \times [0,+\infty) (A,a > 0)$. Then $u = v$ in $D_T \forall T > 0$. Hence $u=v$ in $\mR^n \times [0,+\infty)$. 
+        \item If $v$ is another solution of (CPP) satisfying $v \in \mathcal{C}^{2,1}(\mR^n \times (0,+\infty)) \cap \mathcal{C}^0(\mR^n \times [0,+\infty))$ and $|v(x,t)| \leq A e^{a |x|^2}$ in $\mR^n \times [0,+\infty) (A,a > 0)$. Then $u = v$ in $D_T \forall T > 0$. Hence $u=v$ in $\mR^n \times [0,+\infty)$. 
         \item If $g_1 \in \mathcal{C}^0(\mR^n) \cap L^\infty(\mR^n)$ and $u_1$ is the solution of (CPP) with initial datum $g_1$ and $|u_1(x,t)| \leq A e^{a |x|^2}$, then 
         \begin{equation*}
             \sup_{\mR^n \times (0,+\infty)} |u-u_1| \leq \sup_{\mR^n} |g-g_1|
