txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Second.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Second.tex
@@ -554,7 +554,7 @@ So we choose the constant \( c_0 = \frac{1}{(4\pi )^{n/2}} \), and we obtain the
 Of course, when $x \rightarrow +\infty$ the solution goes to $0$, that is the function is very small in value when we fix a certain value of $t$. \\
 We are now going to study the behaviour of the function when $t \rightarrow + \infty$. \\
 
-\subsection{Some Remarks on the Asymptotic Behavior of $\Gamma (x,t)$ }\\
+\subsection{Some Remarks on the Asymptotic Behavior of $\Gamma (x,t)$ }
 \begin{itemize}
     \item It is 
   \[
