txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Second.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Second.tex
@@ -2581,7 +2581,7 @@ Hence
 \begin{equation*}
     -\Delta T_\phi = \delta
 \end{equation*}
-and $T_\phi$ (or $\phi$) is the fundamental solution of $-\Delta$ in the sens of distribution theory. \\
+and $T_\phi$ (or $\phi$) is the fundamental solution of $-\Delta$ in the sense of distribution theory. \\
 Hence, from distribution theory, we know that $\T_\phi \* h$ satisfies 
 \begin{equation*}
     -\Delta (T_\phi \* h) = h \quad \forall h \in \mathcal{C}^\infty_0 (\mR^n)
